2009-03-13  Atsushi Enomoto  <atsushi@ximian.com>

	* CrossDomainAccessManager.cs: temporarily disable
	  access checker to just warn invalid access for now.

2009-03-05  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceKnownTypeAttribute.cs : correct implementation to populate
	  specified types.

2009-03-05  Atsushi Enomoto  <atsushi@ximian.com>

	* MessageHeaderException.cs : added missing members.

2009-03-04  Atsushi Enomoto  <atsushi@ximian.com>

	* CrossDomainPolicy.cs : added validation method. Not sure if it is
	  complete.
	* CrossDomainAccessManager.cs : validate against crossdomain.xml too.

2009-03-04  Atsushi Enomoto  <atsushi@ximian.com>

	* CrossDomainAccessManager.cs : replace reflection-based
	  Uri retrieval with actually working one.

2009-03-04  Atsushi Enomoto  <atsushi@ximian.com>

	* CrossDomainAccessManager.cs : 2.1 WebRequest misses some
 	  members used here.

2009-03-04  Atsushi Enomoto  <atsushi@ximian.com>

	* CrossDomainAccessManager.cs, ClientAccessPolicy.cs,
	  CrossDomainPolicy.cs : new. support cross domain access check.

2009-02-27  Atsushi Enomoto  <atsushi@ximian.com>

	* ClientBase.cs : give successful WCF call completion info.

2009-02-27  Atsushi Enomoto  <atsushi@ximian.com>

	* ClientBase.cs : diagnose more precisely.

2009-02-26  Atsushi Enomoto  <atsushi@ximian.com>

	* ClientProxyGenerator.cs : fix wrong argument index.

2009-02-26  Atsushi Enomoto  <atsushi@ximian.com>

	* ClientBase.cs : use overridable CreateChannel().

2009-02-26  Atsushi Enomoto  <atsushi@ximian.com>

	* ClientBase.cs : make it work with SL2 UI threading model.

2009-02-26  Atsushi Enomoto  <atsushi@ximian.com>

	* ClientProxyGenerator.cs : simply use CodeMethod.GetArg().

2009-02-26  Atsushi Enomoto  <atsushi@ximian.com>

	* ClientRuntimeChannel.cs, ClientProxyGenerator.cs,
	  ClientBase.cs, ChannelFactory_1.cs, DuplexClientBase.cs:
	  now ClientBase<TChannel>.InnerChannel became ChannelBase<T> as